# cppglsl

./: CMakeLists.txt  LICENSE  README.md
include/glsl/: glsl.h  matrix.h  matrix_functions.h  vector.h  vector_functions.h
include/glsl/details/: utils.h  vector_base.h  vector_proxy.h
tests/: CMakeLists.txt  test.cpp  test.h
